# Zencoder

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPLETE_SOURCE_README.md  GPU_MODELS_16GB.md  LICENSE  PROJECT_STRUCTURE.md  README.md  ULTIMATE_MODELS_GUIDE.md  WINDOWS_SETUP.md  advanced_models_setup.sh  build.bat  build.sh  cursor_config.md  gpu_optimized_setup.sh  install_ollama.sh  menu.h  run_example.bat  run_tests.bat  setup_and_build.sh  stub_types.h  ultimate_models_setup.sh
Rawr/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  README_WINDOWS.md  Rawr.sln  Rawr.vcxproj  Zencoder.sln  Zencoder.vcxproj  Zencoder.vcxproj.filters  main.cpp  menu.cpp  menu.h  packer.cpp  packer.h  rawr_simple
Rawr/driver/: EncryptionHookDriver.h
Rawr/encryption/: aes_cbc.cpp  aes_cbc.h  aes_ctr.cpp  aes_ctr.h  blowfish.cpp  blowfish.h  camellia.cpp  camellia.h  chacha20.cpp  chacha20.h  encryption_base.cpp  encryption_base.h  gcm.cpp  gcm.h  poly1305.cpp  poly1305.h  rc4.cpp  rc4.h  serpent.cpp  serpent.h  twofish.cpp  twofish.h
Rawr/examples/: simple_encryption.cpp
Rawr/include/: packer.h  stub_generator.h
Rawr/src/: packer.cpp  protect.cpp  protect.h  stub_generator.cpp
Rawr/src/encryption/: encryption_base.cpp  serpent.cpp
Rawr/types/: file_enc_dec.cpp  file_enc_dec.h  multi_file_handler.cpp  multi_file_handler.h
Rawr/utils/: file_helper.cpp  file_helper.h  logging.cpp  logging.h  mem_mapper.cpp  mem_mapper.h  pe_defs.h  pe_parser.cpp  pe_parser.h  windows_stubs.h
encryption/: chacha20.cpp
examples/: basic_usage.cpp  continue_config.json  quick_start.sh  test_ollama.py
include/: packer.h  stub_types.h
modelfiles/: deepseek-coder-v2-16b-32k.Modelfile
my-crypto-project/: AUGMENT_SETUP.md  GETTING_STARTED.md  packer.h  simple_main.cpp
my-crypto-project/examples/: simple_encryption.cpp
my-crypto-project/include/: packer.h
my-crypto-project/src/: menu.cpp  menu.h
my-crypto-project/src/utils/: logging.h
my-crypto-project/test/: test_packer.cpp
ollama-cursor-poc/: README.md  setup.sh
ollama-cursor-poc/backend/: main.py  requirements.txt
ollama-cursor-poc/docs/: 7800XT-models.md
ollama-cursor-poc/frontend/: app.js  index.html  styles.css
ollama_cursor_poc/: README.md  amd_gpu_setup.sh  api_server.py  config.py  cursor_integration.py  gpu_optimized_models.md  ollama_client.py  requirements.txt  security_models.md  security_setup.sh  setup_script.sh  test_examples.py  web_interface.py
src/: drag_drop.cpp  drag_drop.h  main.cpp  menu.cpp  menu.h  packer.cpp  packer.h  stub_generator.cpp  stub_generator.h
src/encryption/: aes_cbc.cpp  aes_cbc.h
src/types/: enums.h
src/utils/: file_utils.cpp  file_utils.h  logging.cpp  logging.h
test/: simple_test.cpp
types/: enums.h
